--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,17 +73,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+   - family: IBMPlexSansCondensed
+     fonts:
+       - asset: assets/fonts/IBMPlexSansCondensed-Bold.ttf
+         weight: 700
+       - asset: assets/fonts/IBMPlexSansCondensed-SemiBold.ttf
+         weight: 600
+       - asset: assets/fonts/IBMPlexSansCondensed-Medium.ttf
+         weight: 500
+       - asset: assets/fonts/IBMPlexSansCondensed-Regular.ttf
+         weight: 400
+       - asset: assets/fonts/IBMPlexSansCondensed-Light.ttf
+         weight: 300
+       - asset: assets/fonts/IBMPlexSansCondensed-ExtraLight.ttf
+         weight: 200
+       - asset: assets/fonts/IBMPlexSansCondensed-Thin.ttf
+         weight: 100
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
